--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: Your New Jekyll Site
+name: Laboratory Medicine and Pathology Residency and Fellowship Programs
 markdown: redcarpet
 pygments: true
