--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ name: Laboratory Medicine and Pathology Residency and Fellowship Programs
 markdown: redcarpet
 pygments: true
 redirects: yes
+baseurl: /fragmentary-lesion
